# Computacao-Grafica-1

./: .gitignore  CMakeLists.txt  HowToRun.md  README.md  build_and_run.bat
Atividade01/: main.cpp
Atividade02/: main.cpp
Atividade03/: main.cpp
Atividade04/: main copy.cpp  main.cpp
Atividade05/: main copy.cpp  main.cpp
Atividade06/: main.cpp
Atividade06/ObjetosAtividade/: ArvoreNatal.hpp  Galpao.hpp  Mesa.hpp  Portico.hpp
Atividade07 ( TrabalhoFinal )/: main.cpp
Atividade07 ( TrabalhoFinal )/Objetos/: Arvore.hpp  Banco.hpp  Banqueta.hpp  CarrinhoBaloes.hpp  Fonte.hpp  Lixeira.hpp  Mesa.hpp  Piso.hpp  Poste.hpp  Tabuleiro.hpp
Classes/Objetos/Cilindro/: Cilindro.cpp  Cilindro.hpp
Classes/Objetos/Cone/: Cone.cpp  Cone.hpp
Classes/Objetos/Cubo/: Cubo.cpp  Cubo.hpp
Classes/Objetos/Elipsoide/: Elipsoide.cpp  Elipsoide.hpp
Classes/Objetos/Esfera/: Esfera.cpp  Esfera.hpp
Classes/Objetos/Malha/: Malha.cpp  Malha.hpp
Classes/Objetos/ObjetoAbstrato/: Objeto.cpp  Objeto.hpp
Classes/Objetos/ObjetoComplexo/: ObjetoComplexo.cpp  ObjetoComplexo.hpp
Classes/Objetos/Paralelepipedo/: Paralelepipedo.cpp  Paralelepipedo.hpp
Classes/Objetos/Plano/: Plano.cpp  Plano.hpp
Classes/Objetos/Triangulo/: Triangulo.cpp  Triangulo.hpp
Classes/Utils/Camera/: Camera.cpp  Camera.hpp
Classes/Utils/Canvas/: Canvas.cpp  Canvas.hpp
Classes/Utils/HitInfo/: HitInfo.hpp
Classes/Utils/InterfaceGrafica/: interface.cpp  interface.hpp
Classes/Utils/Janela/: Canvas.cpp  Canvas.hpp  Janela.cpp  Janela.hpp  Luz.hpp
Classes/Utils/Luz/: Luz.cpp  Luz.hpp
Classes/Utils/Luz/LuzDirecional/: LuzDirecional.cpp  LuzDirecional.hpp
Classes/Utils/Luz/LuzPontual/: LuzPontual.cpp  LuzPontual.hpp
Classes/Utils/Luz/LuzSpot/: LuzSpot.cpp  LuzSpot.hpp
Classes/Utils/Matriz/: Matriz3x3.cpp  Matriz3x3.hpp  Matriz4x4.cpp  Matriz4x4.hpp
Classes/Utils/Matriz3x3/: Matriz3x3.cpp  Matriz3x3.hpp
Classes/Utils/Ponto/: Ponto.cpp  Ponto.hpp
Classes/Utils/Quaternio/: Quaternio.cpp  Quaternio.hpp
Classes/Utils/Vetor/: Vetor.cpp  Vetor.hpp
